[package]
name = "aptos-keygrind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using aptos-core directly since the published crate fails to build.
aptos-keygen = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "crates/aptos-keygen/", rev = "92f8b659094f2643a33a0d98f74b41dd676144f5" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core.git", subdir = "types/", rev = "92f8b659094f2643a33a0d98f74b41dd676144f5" }
clap = { version = "3.2.17" }
hex = "0.4.3"
num_cpus = "1.13.1"
serde_json = "1.0.85"
serde = "1.0.144"
